Use \cs_new_eq:NN for some set-up
By this stage the "new" mechanism is available so should be used.
This has a knock-on effect on the test files.

--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -676,8 +676,8 @@
 %   Those two primitive \TeX{} conditionals are synonyms.
 %   They should not be used outside the kernel code.
 %    \begin{macrocode}
-\tex_let:D \if_bool:N          \tex_ifodd:D
-\tex_let:D \if_predicate:w     \tex_ifodd:D
+\cs_new_eq:NN \if_bool:N      \tex_ifodd:D
+\cs_new_eq:NN \if_predicate:w \tex_ifodd:D
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
